refactor: lazy loading modules, auth guards on modules instead of routes

--- a/projects/angular-ngrx-material-starter/src/assets/i18n/en.json
+++ b/projects/angular-ngrx-material-starter/src/assets/i18n/en.json
@@ -71,6 +71,9 @@
   "ngrxtmp.profile.repos": "Repositories",
   "ngrxtmp.profile.lang": "Languages",
   "ngrxtmp.profile.tech": "Technologies",
+  "ngrxtmp.matches.title": "Your matches",
+  "ngrxtmp.matches.profile": "Your match's profile",
+  "ngrxtmp.matches.chat": "Chat with your match",
   "ngrxtmp.title.long": "Angular NgRx Material Template",
   "ngrxtmp.title.short": "Angular Template"
 }
